<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="#FFF"
    android:id="@+id/main">


    <!-- Title -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/basic_calculator"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="30sp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="30dp"/>

    <!-- First Number Input -->
    <EditText
        android:id="@+id/firstVal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_first_number"
        android:textColorHint="#03A9F4"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="#000"
        android:inputType="numberDecimal"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="20dp"/>

    <!-- Second Number Input -->
    <EditText
        android:id="@+id/secondVal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_second_number"
        android:textColorHint="#03A9F4"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="#000"
        android:inputType="numberDecimal"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="50dp"/>

    <!-- Operation Buttons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="30dp">

        <Button
            android:id="@+id/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:textSize="20sp"
            android:layout_marginEnd="5dp"/>

        <Button
            android:id="@+id/sub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subtract"
            android:textSize="20sp"
            android:layout_marginEnd="5sp"/>

        <Button
            android:id="@+id/div"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/divide"
            android:textSize="20sp"
            android:layout_marginEnd="5dp"/>

        <Button
            android:id="@+id/mul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/multiply"
            android:textSize="20sp"/>
    </LinearLayout>

    <!-- Reset Button -->
    <Button
        android:id="@+id/reset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        android:textSize="20sp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginBottom="30dp"/>

    <!-- Result Display -->
    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint ="@string/result_hint"
        android:textSize="30sp"
        android:textColorHint="#03A9F4"
        android:textAlignment="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="50dp"/>
</LinearLayout>
